# TalentMind

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PHASE2_MILESTONE1_REPORT.md  PHASE2_MILESTONE2_REPORT.md  PHASE3_MILESTONE1_REPORT.md  PHASE3_MILESTONE2_REPORT.md  README.md  REPOSITORY_HEALTH.md  app.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  rank.py  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
docs/: AI_PLATFORM.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DISASTER_RECOVERY.md  ENTERPRISE_AGENTS.md  FAQ.md  INSTALL.md  INTEGRATIONS.md  MULTI_AGENT_SYSTEM.md  OPERATIONS.md  PROJECT_STRUCTURE.md  RUNTIME.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/assets/: README.md
k8s/: 00-namespace.yaml  01-serviceaccount.yaml  02-configmap.yaml  03-secret.template.yaml  04-persistentvolume.yaml  05-deployment.yaml  06-service.yaml  07-ingress.yaml  08-hpa.yaml  09-networkpolicy.yaml  10-poddisruptionbudget.yaml  HELM_STRUCTURE.md  README.md
memory/: MEMORY.md  faiss-torch-import-order.md  phase2-m2-workspace.md  phase3-m1-ai-platform.md  phase3-m2-copilot.md  phase3-m3-orchestration.md  phase4-m1-resume-agent.md  phase4-m2-jd-agent.md  phase4-m3-hiring-committee.md  phase4-m5-interview-studio.md  phase5-m1-compensation.md  phase5-m2-pay-equity.md  phase5-m3-compliance.md  phase5-m4-audit.md  phase5-m5-hiring-intelligence.md
src/ai/agents/: analysis_interfaces.py  hiring_analyst.py  recruiter_copilot.py
src/ai/cache/: base.py  file_cache.py  key.py
src/ai/committee/: __init__.py  chair.py  committee.py  conflict_resolution.py  consensus.py  discussion.py  executive_report.py  members.py  memory.py  moderator.py  schemas.py  voting.py
src/ai/config/: settings.py
src/ai/copilot/: controller.py  conversation.py  history.py  models.py  planner.py  response_builder.py  session.py  state.py  tool_selector.py
src/ai/core/: agent_config.py  base_agent.py  context.py  exceptions.py  metadata.py  registry.py  response.py  runner.py
src/ai/memory/: base.py  context_builder.py  session.py
src/comparison/: builder.py  models.py
src/dashboard/: analytics.py  charts.py
src/filtering/: engine.py  models.py
src/hiring/: interview_focus.py  offer_prediction.py  recommendation.py  recommendation_model.py  salary_band.py
src/ingestion/: candidate_loader.py  jd_loader.py
src/insights/: builder.py  models.py
src/intelligence/: dashboard.py  jd_analyzer.py  jd_parser.py  keyword_extractor.py  models.py  skill_classifier.py
src/interview/: models.py  planner.py
src/llm/: recruiter_summary.py
src/models/: candidates.py
src/pipeline/: engine.py  models.py  store.py
src/platform/: __init__.py  bootstrap.py  container.py  demo.py
src/reasoning/: recruiter_reasoning.py
src/recruiter/: pipeline.py
src/scoring/: availability.py  behavior_score.py  candidate_score.py  career_score.py  company_score.py  experience_score.py  explainability.py  final_score.py  hiring_recommendation.py  hybrid_score.py  jd_matcher.py  penalty_score.py  red_flags.py  skill_gap.py  skill_score.py  title_score.py
src/semantic/: cross_encoder_reranker.py  embeddings.py  faiss_index.py  recruiter_search.py  semantic_score.py  similar_candidates.py  text_builder.py
src/talent_pool/: models.py  segmentation.py
src/ui/: ai_analyst_tab.py  analytics_dashboard.py  audit_tab.py  candidate_card.py  committee_tab.py  comparison_view.py  compensation_tab.py  compliance_tab.py  components.py  copilot_page.py  dashboard.py  executive_report_tab.py  export.py  filters_panel.py  helpers.py  hiring_intelligence_tab.py  integration_marketplace.py  interview_studio_tab.py  interview_tab.py  jd_intelligence_tab.py  orchestration_page.py  pay_equity_tab.py  pipeline_controls.py  platform_admin.py  profile_tabs.py  recruiter_search.py  resume_intelligence_tab.py  risk_tab.py  runtime_operations.py  security_operations.py  sidebar.py  talent_pool_view.py  theme.py  timeline_tab.py  workspace.py  workspace_state.py
src/utils/: analyzer.py  jd_analyzer.py
tests/: conftest.py  test_ai_platform.py  test_ai_ui.py  test_app_boot.py  test_audit.py  test_audit_ui.py  test_committee.py  test_committee_ui.py  test_compensation.py  test_compensation_ui.py  test_compliance.py  test_compliance_ui.py  test_copilot.py  test_copilot_ui.py  test_deployment_framework.py  test_deployment_platform.py  test_executive_report.py  test_executive_report_ui.py  test_hiring_intelligence.py  test_hiring_intelligence_ui.py  test_interview_studio.py  test_interview_studio_ui.py  test_jd_agent.py  test_jd_ui.py  test_orchestration.py  test_orchestration_ui.py  test_pay_equity.py  test_pay_equity_ui.py  test_pipeline.py  test_platform_admin_ui.py  test_platform_auth.py  test_platform_events_sync.py  test_platform_foundation.py  test_platform_gateway.py  test_platform_infra.py  test_platform_integration.py  test_platform_integration_platform.py  test_platform_integration_providers.py  test_platform_integrations_framework.py  test_platform_marketplace_ui.py  (+26 more)
(+457 files in other folders)
